v2-website/versioned_docs/version-0.12/transforms.md
---
id: transforms
title: Transforms
original_id: transforms
---

### Props

- [`transform`](transforms.md#transform)
- [`transformMatrix`](transforms.md#transformmatrix)

---

# Reference

## Props

### `transform`

| Type                                                                                                                                                                                                                                                                                                                                                    | Required |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------- |
| array of object: {perspective: number}, ,object: {rotate: string}, ,object: {rotateX: string}, ,object: {rotateY: string}, ,object: {rotateZ: string}, ,object: {scale: number}, ,object: {scaleX: number}, ,object: {scaleY: number}, ,object: {translateX: number}, ,object: {translateY: number}, ,object: {skewX: string}, ,object: {skewY: string} | No       |

---

### `transformMatrix`

| Type            | Required |
| --------------- | -------- |
| array of number | No       |
